# StackYan

./: .gitignore  CMakeLists.txt  README.md  TODO.md  partitions.csv  sdkconfig.defaults
com/: M5Stack_StackChan_technical_requirements.md  StackYan_v1_design_plan.md
components/stackchu_hal/: CMakeLists.txt
components/stackchu_hal/include/: Hal.h  HalPins.h  Types.h
components/stackchu_hal/include/hal/: IBacklight.h  IIr.h  IMotionSensor.h  IPower.h  IRgb.h  IServo.h  IStorage.h
components/stackchu_hal/src/: BacklightAxp2101.cpp  Hal.cpp  I2cBus.h  IrNec.cpp  MotionBmi270.cpp  PowerAxp2101.cpp  RgbSk6812.cpp  ServoFtBus.cpp  StorageFatFs.cpp
main/: CMakeLists.txt  main.cpp
main/api/: ApiServer.cpp  ApiServer.h
main/avatar/: AvatarService.cpp  AvatarService.h
main/events/: EventBus.cpp  EventBus.h
main/hardware/: EspHardware.h  IHardware.h
main/network/: NetworkManager.cpp  NetworkManager.h
main/storage/: StorageLayout.cpp  StorageLayout.h
main/tools/: BuiltinTools.cpp  BuiltinTools.h  ITool.h  ToolRegistry.cpp  ToolRegistry.h
simulator/: CMakeLists.txt
simulator/src/: SimApiServer.cpp  SimApiServer.h  SimHardware.cpp  SimHardware.h  SimWebUi.h  main.cpp
